Fix: wrong size of .main-pane-cont in small screen mode.

--- a/less/mainbody.less
+++ b/less/mainbody.less
@@ -47,6 +47,12 @@ body when (@UI_TYPE = 'MOBILE') {
 .main-pane-cont {
   .box-sizing();
   position: relative;
+}
+
+/*Main container must have height in order to allow child elements use percent
+  height. Child elements, like side pane, use percent height only in big screen
+  mode.*/
+.main-pane-cont-big-screen {
   height: ~"calc(100% - 63px)";
 }
 
